--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -9,7 +9,7 @@ const social = await getCollection('social')
 <div class='h-24 lg:h-16'></div>
 <footer class='text-gray-600 dark:text-gray-400'>
   <div
-    class='fixed inset-x-0 bottom-0 z-20 flex w-full flex-col items-center border-t-2 border-purple-300 bg-gray-100 px-4 py-1 dark:border-purple-600 dark:bg-gray-800 lg:flex-row lg:px-8 lg:py-4'
+    class='inset-x-0 bottom-0 z-20 flex w-full flex-col items-center border-t-2 border-purple-300 bg-gray-100 px-4 py-1 dark:border-purple-600 dark:bg-gray-800 lg:flex-row lg:px-8 lg:py-4'
   >
     <span class='flex flex-none flex-row items-center'>
       <a
