update overview image

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -46,7 +46,7 @@ import { Logo } from '../config'
     </button>
     <!-- Sidebar content here -->
        <!-- Logo -->
-    <a href="/servicii-funerare-sascut/" class="flex items-center justify-center">
+    <a href="/" class="flex items-center justify-center">
       <img class="max-w-[18rem]" src={Logo.src} alt="Logo" />
     </a>
 
