fixes on styling

--- a/src/components/nextprev.astro
+++ b/src/components/nextprev.astro
@@ -2,45 +2,40 @@
 import type { CollectionEntry } from 'astro:content'
 
 export interface Props {
-  base: string
   prev?: CollectionEntry<'blog'> | CollectionEntry<'doc'>
   next?: CollectionEntry<'blog'> | CollectionEntry<'doc'>
 }
 
-const { base, prev, next } = Astro.props
+const { prev, next } = Astro.props
 ---
 
 <dl class='my-12 px-10 lg:px-24 flex border-t border-purple-300 pt-6 dark:border-purple-700'>
-  {
-    prev && (
-      <div class='mr-auto text-left'>
-        <dt class='font-display text-gray-800 dark:text-white font-bold text-sm lg:text-lg'>Inapoi</dt>
-        <dd class='mt-1'>
-          <a
-            class='text-sm lg:text-2xl font-semibold text-purple-600 dark:hover:text-purple-300'
-            href={prev.slug}
-          >
-            <span aria-hidden='true'>←</span>
-            {prev.data.title}
-          </a>
-        </dd>
-      </div>
-    )
-  }
-  {
-    next && (
-      <div class='ml-auto text-right'>
-        <dt class='font-display text-gray-800 dark:text-white font-bold text-sm lg:text-lg'>Inainte</dt>
-        <dd class='mt-1'>
-          <a
-            class='text-sm lg:text-2xl font-semibold text-purple-600 dark:hover:text-purple-300'
-            href={next.slug}
-          >
-            {next.data.title}
-            <span aria-hidden='true'>→</span>
-          </a>
-        </dd>
-      </div>
-    )
-  }
+  {prev && (
+    <div class='mr-auto text-left'>
+      <dt class='font-display text-gray-800 dark:text-white font-bold text-sm lg:text-lg'>Inapoi</dt>
+      <dd class='mt-1'>
+        <a
+          class='text-sm lg:text-2xl font-semibold text-purple-600 dark:hover:text-purple-300'
+          href={`/${prev.slug}`}
+        >
+          <span aria-hidden='true'>←</span>
+          {prev.data.title}
+        </a>
+      </dd>
+    </div>
+  )}
+  {next && (
+    <div class='ml-auto text-right'>
+      <dt class='font-display text-gray-800 dark:text-white font-bold text-sm lg:text-lg'>Inainte</dt>
+      <dd class='mt-1'>
+        <a
+          class='text-sm lg:text-2xl font-semibold text-purple-600 dark:hover:text-purple-300'
+          href={`/${next.slug}`}
+        >
+          {next.data.title}
+          <span aria-hidden='true'>→</span>
+        </a>
+      </dd>
+    </div>
+  )}
 </dl>
