--- a/src/components/servicii.astro
+++ b/src/components/servicii.astro
@@ -2,7 +2,7 @@
 const { image, alt, title } = Astro.props;
 ---
 
-<div class="flex items-center space-x-8 border p-8 rounded-xl shadow-lg bg-[#D9A77D] my-6">
+<div class="flex items-center space-x-8 border p-8 m-8 rounded-xl shadow-lg bg-[#D9A77D] my-6">
   <div class="w-80 h-80 bg-[#C98A60] flex items-center justify-center rounded-xl">
     <img src={image.src} alt={alt} class="w-72 h-72 object-cover rounded-xl" />
   </div>
