--- a/src/components/nextprev.astro
+++ b/src/components/nextprev.astro
@@ -16,7 +16,7 @@ const { prev, next } = Astro.props
       <dd class='mt-1'>
         <a
           class='text-sm lg:text-2xl font-semibold text-purple-600 dark:hover:text-purple-300'
-          href={`/${prev.slug}`}
+          href={`/servicii/${prev.slug}`}
         >
           <span aria-hidden='true'>←</span>
           {prev.data.title}
@@ -30,7 +30,7 @@ const { prev, next } = Astro.props
       <dd class='mt-1'>
         <a
           class='text-sm lg:text-2xl font-semibold text-purple-600 dark:hover:text-purple-300'
-          href={`/${next.slug}`}
+          href={`/servicii/${next.slug}`}
         >
           {next.data.title}
           <span aria-hidden='true'>→</span>
