change some styling

--- a/src/components/gallery.astro
+++ b/src/components/gallery.astro
@@ -25,7 +25,7 @@ for (let i in folderFiles) {
 
 <div
   id={gallery}
-  class='not-prose mx-auto block w-full columns-2 gap-4 sm:columns-2 lg:columns-3 lg:gap-4'
+  class='not-prose mx-auto block w-full columns-2 gap-4 sm:columns-2 lg:columns-3 lg:gap-4 lg:px-5'
   itemscope
   itemtype='http://schema.org/ImageGallery'
 >
