--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -7,7 +7,7 @@ import overviewImage from '../assets/astro/overview.jpeg';
   <!-- Background image -->
   <div
     class='absolute inset-0 bg-cover'
-    style={`background-image: url('${overviewImage}');`}
+    style={`background-image: url('${overviewImage.src}');`}
   ></div>
 
   <!-- Overlay for readability with header gradient -->
