--- a/src/layouts/blog.astro
+++ b/src/layouts/blog.astro
@@ -32,7 +32,7 @@ const { post, prev, next } = Astro.props
   </main>
   <NextPrev
     slot='before-footer'
-    base={import.meta.env.BASE_URL + 'blog/'}
+    base={import.meta.env.BASE_URL + 'servicii/'}
     prev={prev}
     next={next}
   />
