--- a/src/layouts/doc.astro
+++ b/src/layouts/doc.astro
@@ -68,7 +68,7 @@ const basefm: CollectionEntry<'page'>['data'] = {
         <section class='prose prose-lg text-gray-300'>
           <slot />
         </section>
-        <NextPrev base={import.meta.env.BASE_URL + 'doc/'} prev={prev} next={next} />
+        <NextPrev base={import.meta.env.BASE_URL + 'doc'} prev={prev} next={next} />
       </PageContent>
     </div>
         <!-- <aside id='grid-right' class='grid-sidebar' title='Table of Contents'>
