--- a/src/components/bloghero.astro
+++ b/src/components/bloghero.astro
@@ -28,7 +28,7 @@ if (post.data.author) {
 }
 ---
 
-<div class='relative mx-auto my-4 h-96 w-full max-w-screen-xl md:mb-0'>
+<div class='relative mx-auto mb-4 h-96 w-full max-w-screen-xl md:mb-0'>
   <Image
     itemprop='image'
     src={image}
